# string-patterns

./: Cargo.toml  README.md
src/: alphanumeric.rs  enums.rs  lib.rs  pattern_capture.rs  pattern_filter.rs  pattern_many.rs  pattern_match.rs  pattern_replace.rs  pattern_sets.rs  pattern_split.rs  segments.rs  simple_match.rs  utils.rs  words.rs
tests/: integration_tests.rs
